# DirDetective

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  UPDATE_GUIDE.md  UPDATE_QUICKREF.md
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/rules/: built-in.yaml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: ai_provider.rs  lib.rs  models.rs  path_utils.rs  rule_engine.rs  scanner.rs
crates/platform/: Cargo.toml
crates/platform/src/: collector.rs  lib.rs
gui/: i18n.js  index.html  main.js  package.json  pnpm-lock.yaml  styles.css  vite.config.js
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: commands.rs  lib.rs  main.rs  update.rs
rules/: macos.json
