[package]
name = "dirdetective-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
keyring = { version = "3", features = ["apple-native"] }
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread"] }
