[package]
name = "dirdetective-gui"
version = "0.2.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirdetective-core = { path = "../../crates/core" }
dirdetective-platform = { path = "../../crates/platform" }
tokio = { version = "1", features = ["full"] }
trash = "5"
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
